@@ -47,6 +47,8 @@ public:
     VAbstractCurve& operator= (const VAbstractCurve &curve);
 
     virtual QVector<QPointF> GetPoints() const =0;
+    static QVector<QPointF>  GetSegmentPoints(const QVector<QPointF> &points, const QPointF &begin, const QPointF &end,
+                                              bool reverse = false);
     QVector<QPointF>         GetSegmentPoints(const QPointF &begin, const QPointF &end, bool reverse = false) const;
 
     virtual QPainterPath     GetPath(PathDirection direction = PathDirection::Hide) const;
