@@ -45,6 +45,7 @@
 #include "tst_vcommandline.h"
 #include "tst_tstranslation.h"
 #include "tst_vdetail.h"
+#include "tst_vabstractcurve.h"
 
 int main(int argc, char** argv)
 {
@@ -76,6 +77,7 @@ int main(int argc, char** argv)
     ASSERT_TEST(new TST_Misc());
     ASSERT_TEST(new TST_VCommandLine());
     ASSERT_TEST(new TST_TSTranslation());
+    ASSERT_TEST(new TST_VAbstractCurve());
 
     return status;
 }
